--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="imgs/uwon.png" alt="You Won" id="youwon">
         <p id="playagain">Play Again!</p>
     </div>
-    <canvas class="adjust-gameover-and-canvas-dimensions"> </canvas>
+    <canvas class="adjust-gameover-and-canvas-dimensions" width="600" height="500"> </canvas>
 
     <script src="script.js"></script>
 </body>
