Adding Game Start Function

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 </head>
 
 <body>
-    <div class="adjust-gameover-and-canvas-dimensions" id="gameover">
-        <img src="imgs/gover.png" alt="Game Over" id="youlost">
-        <img src="imgs/uwon.png" alt="You Won" id="youwon">
+    <div class="positioning-and-dimensions" id="game-interface">
+        <img src="imgs/gstart.png" alt="Game Start" id="gstart-img">
+        <p id="play-now">Play Now!</p>
+    </div>
+    <div class="positioning-and-dimensions" id="gameover">
+        <img src="imgs/gover.png" alt="Game Over" id="gover-img">
+        <img src="imgs/uwon.png" alt="You Won" id="uwon-img">
         <p id="playagain">Play Again!</p>
     </div>
-    <canvas class="adjust-gameover-and-canvas-dimensions"> </canvas>
+    <canvas class="positioning-and-dimensions"> </canvas>
 
     <script src="script.js"></script>
 </body>
