--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <canvas></canvas>
+    <canvas id="canvas" width="800" height="660"></canvas>
     <script src="script.js"></script>
 </body>
 </html>
