--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <img src="imgs/uwon.png" alt="You Won" id="uwon-img">
         <p id="playagain">Play Again!</p>
     </div>
+    <div class="sound">
+    <!-- <img src="SOUND_ON.png" id="sound"> -->
+    </div>
     <canvas class="positioning-and-dimensions"  width="600" height="500"> </canvas>
 
     <script src="script.js"></script>
