--- a/index.html
+++ b/index.html
@@ -24,14 +24,8 @@
         <img src="imgs/uwon.png" alt="You Won" id="uwon-img">
         <p id="playagain">Play Again!</p>
 
-    </div>
-<<<<<<< HEAD
-=======
-    <div class="sound">
-    <!-- <img src="SOUND_ON.png" id="sound"> -->
-    </div>
-    <canvas class="positioning-and-dimensions"  width="600" height="500"> </canvas>
->>>>>>> 9b2ff7e6ac08298b032a88d79546502c7022b61e
+ 
+    <!-- <canvas class="positioning-and-dimensions"  width="600" height="500"> </canvas> - --> 
 
     <script src="script.js"></script>
 
